# EchoDiary

./: .gitignore  .pre-commit-config.yaml  README.md  dates.txt  main.py  pyproject.toml  pytest.ini  resource_rc.py  t2i.py  test.py  test2.py
app/config/: config.json
common/: __init__.py  config.py  signal_bus.py  style_sheet.py  translator.py
data/config/: city_code.json  config.json
data/diary_data/: 2024-06-14.enc  2024-06-15.enc  2024-06-16.enc
data/keys/: private_key.pem  public_key.pem
managers/: __init__.py  config_manager.py  crypto_manager.py  diary_manager.py  weather_manager.py
models/: __init.py  __init__.py  config.py  diary.py
prompts/: __init__.py  chat_summarization_prompt.py  chat_system_prompt.py  diary_common_prompt.py  diary_generate_prompt.py  qa_context_prompt.py
rag/: __init__.py  llm_chat_with_history.py  llm_generator.py  rag_pipeline.py  rag_retriever.py  temp.py
resource/: resource.qrc
tests/managers/: test_crypto_manager.py
tests/mock_data/test_diary/: diarys.py
tests/mock_data/test_keys/: private_key.pem  public_key.pem
tests/rag/: test_rag_pipeline.py
utils/: config.py  crypter.py  html2img.py
view/: calendar_interface.py  chat_window.py  editor_interface.py  editor_interface_2.py  editor_interface_3.py  main_window.py  setting_interface.py  splash_screen.py
